--- a/public/css/map.css
+++ b/public/css/map.css
@@ -1,14 +1,16 @@
 html, body, #map-canvas{
     height: 100%;
-    width: 100%;
+    width: 100%
 }
 
-.chatInput {
-
+body {
+    padding-top: 50px;
+    overflow: hidden;
+    position: fixed;
 }
 
 .col-sm-6 {
-    height: 180px;
+    /*height: 180px;*/
     overflow: scroll;
 }
 
